# assignment2/codebase/src/api_service/src/openapi_server/models/order.py
@@ -1,0 +1,110 @@
+# coding: utf-8
+
+"""
+    SUSTech Merch Store API
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, StrictFloat, StrictInt, StrictStr, field_validator
+from typing import Any, ClassVar, Dict, List, Optional, Union
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class Order(BaseModel):
+    """
+    Order
+    """ # noqa: E501
+    id: Optional[StrictInt] = None
+    user_id: Optional[StrictInt] = None
+    product_id: Optional[StrictInt] = None
+    quantity: Optional[StrictInt] = None
+    total_price: Optional[Union[StrictFloat, StrictInt]] = None
+    status: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["id", "user_id", "product_id", "quantity", "total_price", "status"]
+
+    @field_validator('status')
+    def status_validate_enum(cls, value):
+        """Validates the enum"""
+        if value is None:
+            return value
+
+        if value not in ('PLACED', 'CANCELED'):
+            raise ValueError("must be one of enum values ('PLACED', 'CANCELED')")
+        return value
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of Order from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of Order from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "id": obj.get("id"),
+            "user_id": obj.get("user_id"),
+            "product_id": obj.get("product_id"),
+            "quantity": obj.get("quantity"),
+            "total_price": obj.get("total_price"),
+            "status": obj.get("status")
+        })
+        return _obj
+
+
